feat(backend): add Spring Boot Actuator and configure health endpoint

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=backend
+
+# Expose health endpoint at /health
+management.endpoints.web.exposure.include=health
+management.endpoints.web.base-path=/
