--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,20 @@
 # Multi-stage build for Spring Boot application
-FROM maven:3.9.4-openjdk-21-slim AS build
+
+# -------- Build stage --------
+FROM maven:3.9.4-eclipse-temurin-21 AS build
 WORKDIR /app
+
 COPY pom.xml .
+RUN mvn dependency:go-offline
+
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM openjdk:21-jdk-slim
+# -------- Runtime stage --------
+FROM eclipse-temurin:21-jre
 WORKDIR /app
+
 COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
