--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,24 @@
 spring.application.name=backend
 
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/course_learning
+spring.datasource.username=root
+spring.datasource.password=Admin@1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 # Expose health endpoint at /health
 management.endpoints.web.exposure.include=health
 management.endpoints.web.base-path=/
+
+# Server Configuration
+server.port=8080
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
