--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,38 @@
 version: '3.8'
 
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: course-learning-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: course_learning
+      MYSQL_USER: courseuser
+      MYSQL_PASSWORD: coursepass
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./backend/src/main/resources/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      image: iamvijay17/course-learning-platform-backend:latest
+    container_name: course-learning-backend
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      mysql:
+        condition: service_healthy
     networks:
       - app-network
 
@@ -17,12 +40,16 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: course-learning-frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
     networks:
       - app-network
+
+volumes:
+  mysql_data:
 
 networks:
   app-network:
